--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import "base/discount";
 @import "base/product";
 @import "base/footer";
+@import "base/scrollup";
 @import "base/media";
 
 // БЭМ-блоки
